# Enigma-Avatar

./: .gitattributes  .gitignore  .prettierignore  .prettierrc.json  CLAUDE.md  Enigma Avatar.bat  README.md  STATUS.md  Start-Avatar.ps1  TODO.md  avatar.js  bone_limits.json  brain.py  bus.py  conjure.js  control.js  default_avatar.js  enigma_avatar_brick.py  eslint.config.mjs  facial.js  foreground.js  geom_face.js  geom_mouth.js  greet.py  hittest.js  idleprofile.js  import_unitypackage.py  index.html  library.js  loader.js  main.js  mathutil.js  mod.json  motionmath.js  package-lock.json  package.json  physics.js  preload.js  procedural.js  pyproject.toml  (+12 more)
.githooks/: pre-commit
anims/: README.txt
enigma_avatar/: __init__.py  main.py  protocol.py
python/: bus.py  import_unitypackage.py  protocol.py  say.py  speak.py
shell/: foreground.cjs  foreground.js  main.cjs  main.js  preload.cjs  preload.js  simhost.mjs
src/: avatar.js
tests/: attachments.test.js  bus.test.js  conjure.test.js  contract.test.js  control.test.js  cospeech.test.js  dom.js  face-geometry.test.js  facial.test.js  fix_model.test.js  fixtures.js  foreground.test.js  gallery.test.js  geom_face.test.js  geom_mouth.test.js  grabfollow.test.js  handwave.test.js  hittest.test.js  idle.test.js  idleprofile.test.js  layers.test.js  library.test.js  loader.test.js  localurl.test.js  look.test.js  mathutil.test.js  meshes.test.js  morphs.test.js  motionmath.test.js  mouth-geometry.test.js  physics.test.js  placement.test.js  procedural.test.js  profiles.test.js  protocol.test.js  query.test.js  (+19 more)
(+55 files in other folders)
